eks-sample-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heart-disease-flask-app
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: 270723717512.dkr.ecr.us-west-2.amazonaws.com/eksblueprintsprivate:latest
        ports:
        - containerPort: 80
